--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,6 +1,6 @@
 <div>
   
-  <img src="https://scontent-mia1-2.xx.fbcdn.net/v/t31.0-0/p180x540/14480728_1174122455981502_1789663370523593974_o.jpg?oh=6cd018074e9a51afcf2942c95dbc3fc5&oe=593F97B8" alt="" style="max-width: 100%; height: auto;">
+  <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/16807199_10155000795147387_126606677838459195_n.jpg?oh=a396d43ab284691d94c10d1010cc68e3&oe=592F9180" alt="" style="max-width: 100%; height: auto;">
 
   <div style="background-color: #804399; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
     <img src="http://www.sflultimate.com/images/nav-logo.png" style="height: 70px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
@@ -12,33 +12,40 @@
     </p>
 
     <p>
-      We have now release team standings.
+      We have two quick news items!
+    </p>
+
+    <p>
+      The first is that on <strong>March 26th</strong> a big football game will be taking place at Ives Estates Park, which has pushed back our games an hour, so that the 4pm game will be at 5pm and the 6pm at 7pm.  We'll be able to go until 9pm that night.
+    </p>
+
+    <p>
+      The schedule page has been updated to reflect these changes.
     </p>
 
     <div style="text-align: center">
-      <a target="_blank" href="http://www.sflultimate.com" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">See Team Standings</a>      
+      <a target="_blank" href="http://sflultimate.com/schedule" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">View Schedule</a>      
     </div>
 
     <p>
-      Also the University of Miami's Men's Ulitmate Team is holding <strong>a hat tournament this Saturday</strong>. The event is open to everyone, and is a great opportunity to meet other ultimate players in the South Florida area.
-    </p>
-
-    <p>
-       All proceeds from this event will support the men's team in their pursuit of a bid to regionals in the spring. Teams will be decided randomly and buddy requests will be honored only if you both request each other. 
-    </p>
-
-    <p>
-      This is a mixed gender tournament, and on the field ratio will be decided based on the number of female participants. Plan to play 3-4 games over the course of the day. Registration is $25.
+      The second item is that this <strong>Saturday, March 18th,</strong> the Fiasco Women's Ultimate team is hosting a <strong>Beach Ultimate Hatter</strong>, which welcomes players of all skills to come have a fun day at the beach!
     </p>
 
     <div style="text-align: center">
-      <a target="_blank" href="https://www.facebook.com/events/254729531589792/" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">See UM Hatter</a>      
+      <a target="_blank" href="https://www.facebook.com/events/1300934746653184/" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">Learn More</a>      
     </div>
 
+    <p>
+       The deadline to register is March 16th by 12PM. Please register using the form linked below and send payment via PayPal or Venmo (or cash on the day of the event).
+    </p>
 
     <p>
-      Lastly, Gary has updated stats for Week 2, so feel free to check them out!
+      Sign up in advance and pay only $10 PayPal rpatel220@gmail.com, Venmo @Rica-Patel or $15 in cash at the beach. 
     </p>
+
+    <div style="text-align: center">
+      <a target="_blank" href="https://goo.gl/forms/dOFnK9Y5UUzKXOSB2" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">Sign up</a>      
+    </div>
 
     <p>
       Thank you!<br>
