--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -66,7 +66,7 @@ block content
   section.champions
     aside.text-center
         h2 Hall of Fame
-        p The past champions of the South Florida 
+        p The past champions of South Florida 
     div
       figure
         img.img-responsive(src="/images/league-champions-2016-fall.jpg")
