--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -1055,7 +1055,7 @@ html {
   -webkit-tap-highlight-color: transparent; }
 
 body {
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.42857;
   color: #333333;
@@ -1139,7 +1139,7 @@ hr {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Oswald", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto Condensed", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
   line-height: 1.1;
   color: inherit; }
@@ -3667,7 +3667,7 @@ tbody.collapse.in {
 
 .navbar {
   position: relative;
-  min-height: 84px;
+  min-height: 50px;
   margin-bottom: 22px;
   border: 1px solid transparent; }
   .navbar:before, .navbar:after {
@@ -3773,10 +3773,10 @@ tbody.collapse.in {
 
 .navbar-brand {
   float: left;
-  padding: 31px 15px;
+  padding: 14px 15px;
   font-size: 20px;
   line-height: 22px;
-  height: 84px; }
+  height: 50px; }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none; }
   .navbar-brand > img {
@@ -3791,8 +3791,8 @@ tbody.collapse.in {
   float: right;
   margin-right: 15px;
   padding: 9px 10px;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin-top: 8px;
+  margin-bottom: 8px;
   background-color: transparent;
   background-image: none;
   border: 1px solid transparent;
@@ -3811,7 +3811,7 @@ tbody.collapse.in {
       display: none; } }
 
 .navbar-nav {
-  margin: 15.5px -15px; }
+  margin: 7px -15px; }
   .navbar-nav > li > a {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -3839,8 +3839,8 @@ tbody.collapse.in {
       .navbar-nav > li {
         float: left; }
         .navbar-nav > li > a {
-          padding-top: 31px;
-          padding-bottom: 31px; } }
+          padding-top: 14px;
+          padding-bottom: 14px; } }
 
 .navbar-form {
   margin-left: -15px;
@@ -3850,8 +3850,8 @@ tbody.collapse.in {
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  margin-top: 24px;
-  margin-bottom: 24px; }
+  margin-top: 7px;
+  margin-bottom: 7px; }
   @media (min-width: 768px) {
     .navbar-form .form-group {
       display: inline-block;
@@ -3919,18 +3919,18 @@ tbody.collapse.in {
   border-bottom-left-radius: 0; }
 
 .navbar-btn {
-  margin-top: 24px;
-  margin-bottom: 24px; }
+  margin-top: 7px;
+  margin-bottom: 7px; }
   .navbar-btn.btn-sm, .btn-group-sm > .navbar-btn.btn {
-    margin-top: 25.5px;
-    margin-bottom: 25.5px; }
+    margin-top: 8.5px;
+    margin-bottom: 8.5px; }
   .navbar-btn.btn-xs, .btn-group-xs > .navbar-btn.btn {
-    margin-top: 31px;
-    margin-bottom: 31px; }
+    margin-top: 14px;
+    margin-bottom: 14px; }
 
 .navbar-text {
-  margin-top: 31px;
-  margin-bottom: 31px; }
+  margin-top: 14px;
+  margin-bottom: 14px; }
   @media (min-width: 768px) {
     .navbar-text {
       float: left;
@@ -5192,7 +5192,7 @@ button.close {
   position: absolute;
   z-index: 1070;
   display: block;
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
@@ -5305,7 +5305,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
@@ -5830,13 +5830,29 @@ button.close {
     transform: translateY(0%); } }
 
 .hero-sky {
-  background: url("/images/elfrink-sky.jpg");
+  background: url("/images/beach-andrea-dumping.jpg");
   background-size: cover;
-  color: white;
-  text-shadow: 2px 2px 11px black;
-  padding: 8em 0 2em;
-  background-position: center center;
-  font-size: 1.5em; }
+  background-position: center center; }
+  .hero-sky .container {
+    position: relative;
+    min-height: 800px; }
+    @media only screen and (max-width: 840px) {
+      .hero-sky .container {
+        min-height: 400px; } }
+  .hero-sky h1 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: white;
+    text-shadow: 2px 2px 11px rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 0.5em 1em;
+    margin-bottom: 1em;
+    font-size: 3.5em;
+    font-weight: 300; }
+    @media only screen and (max-width: 480px) {
+      .hero-sky h1 {
+        font-size: 2.5em; } }
 
 .sfl-divider {
   border-color: #dedede;
@@ -5844,7 +5860,7 @@ button.close {
 
 .call-to-action {
   background-size: cover;
-  background-position: center top;
+  background-position: center center;
   padding: 6em 0;
   color: white; }
   .call-to-action h1 {
@@ -5859,9 +5875,11 @@ button.close {
   .call-to-action h1, .call-to-action p {
     display: inline-block;
     background: rgba(0, 0, 0, 0.4);
+    font-weight: 300;
+    text-shadow: 2px 2px 11px rgba(0, 0, 0, 0.8);
     padding: 0.5em 1em; }
   .call-to-action .btn {
-    font-family: "Oswald", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Roboto Condensed", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     padding: 0.5em 1.5em;
     border-bottom: 3px solid #361c40;
@@ -5885,13 +5903,22 @@ button.close {
   position: relative;
   text-align: center; }
   .champions figure {
-    width: 24%;
+    width: 33%;
     display: inline-block;
     background: rgba(0, 0, 0, 0.1);
-    margin-bottom: -3px; }
-    @media only screen and (max-width: 772px) {
+    margin-bottom: -3px;
+    background-size: cover;
+    min-height: 500px;
+    background-position: center center; }
+    @media only screen and (max-width: 1617px) {
       .champions figure {
-        width: 48%; } }
+        min-height: 300px; } }
+    @media only screen and (max-width: 850px) {
+      .champions figure {
+        min-height: 200px; } }
+    @media only screen and (max-width: 480px) {
+      .champions figure {
+        min-height: 100px; } }
   .champions aside {
     position: absolute;
     color: white;
@@ -5915,19 +5942,18 @@ button.close {
       padding: 0.25em 1.5em;
       background: rgba(0, 0, 0, 0.55); }
 
-.container-fluid div.navbar-header a.navbar-brand {
-  position: relative;
-  width: 200px;
-  margin-right: 1em;
-  margin-left: 0.5em; }
-  .container-fluid div.navbar-header a.navbar-brand img {
-    max-width: 100%;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -100px;
-    margin-top: -21px; }
+.container-fluid a.navbar-brand {
+  float: none;
+  max-width: 300px;
+  margin: 0 auto !important;
+  height: auto;
+  display: block;
+  padding: 0;
+  text-align: center; }
+  .container-fluid a.navbar-brand img {
+    margin-top: 1em;
+    display: block;
+    max-width: 100%; }
 
 .logo-circled {
   margin: 0 auto 1em auto; }
@@ -6050,12 +6076,11 @@ button.close {
   .stats .crimson {
     background-color: rgba(220, 20, 60, 0.25); }
 
-.navbar-inverse {
+.navbar-collapse {
+  border-top: 1px solid rgba(16, 16, 16, 0.37) !important; }
+
+#header > .navbar {
   margin-bottom: 0; }
-  .navbar-inverse .navbar-nav > li > a {
-    text-transform: uppercase;
-    font-family: "Oswald", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 20px; }
 
 .register {
   font-size: 1.2em; }
