--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,56 +1,35 @@
 <div>
   
-  <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/16807199_10155000795147387_126606677838459195_n.jpg?oh=a396d43ab284691d94c10d1010cc68e3&oe=592F9180" alt="" style="max-width: 100%; height: auto;">
+  <img src="http://www.sflultimate.com/images/hatter-beach-ultimate.jpg" alt="" style="max-width: 100%; height: auto;">
 
   <div style="background-color: #804399; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
     <img src="http://www.sflultimate.com/images/nav-logo.png" style="height: 70px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
   </div>
 
   <div style="padding: 1em;">
-    <p>
-      Hi Players!
-    </p>
 
-    <p>
-      We have two quick news items!
-    </p>
-
-    <p>
-      The first is that on <strong>March 26th</strong> a big football game will be taking place at Ives Estates Park, which has pushed back our games an hour, so that the 4pm game will be at 5pm and the 6pm at 7pm.  We'll be able to go until 9pm that night.
-    </p>
-
-    <p>
-      The schedule page has been updated to reflect these changes.
-    </p>
-
-    <div style="text-align: center">
-      <a target="_blank" href="http://sflultimate.com/schedule" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">View Schedule</a>      
-    </div>
-
-    <p>
-      The second item is that this <strong>Saturday, March 18th,</strong> the Fiasco Women's Ultimate team is hosting a <strong>Beach Ultimate Hatter</strong>, which welcomes players of all skills to come have a fun day at the beach!
-    </p>
-
-    <div style="text-align: center">
-      <a target="_blank" href="https://www.facebook.com/events/1300934746653184/" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">Learn More</a>      
-    </div>
-
-    <p>
-       The deadline to register is March 16th by 12PM. Please register using the form linked below and send payment via PayPal or Venmo (or cash on the day of the event).
-    </p>
-
-    <p>
-      Sign up in advance and pay only $10 PayPal rpatel220@gmail.com, Venmo @Rica-Patel or $15 in cash at the beach. 
-    </p>
-
-    <div style="text-align: center">
-      <a target="_blank" href="https://goo.gl/forms/dOFnK9Y5UUzKXOSB2" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">Sign up</a>      
-    </div>
-
-    <p>
-      Thank you!<br>
-      South Florida Ultimate
-    </p>
+    
+    <p>Welcome everyone!</p>
+    
+    <p>With a new fall comes a brand new, <strong>revolutionary</strong> way to play Ultimate Frisbee.</p>
+    
+    <p><strong>Florida ranks #2 in beach coastline</strong> with 1,350 miles of pristine, gorgeous, sunny, beaches (trivia: Alaska is #1 but surprisingly no one likes playing beach frisbee there).</p>
+    
+    <p>Yet we haven't taken advantage of this wondrous gift.</p>
+    
+    <p>For this reason, we've decided for this fall and winter to offer our <strong>first organized Beach Ultimate League</strong>.</p>
+    
+    <p>>We'll games on Saturday mornings at 10am near the beach space by Park & Ocean <strong>staring November, 4th and played until December 9th.</strong>  Our finals would be on December 16th.</p>
+    
+    <p>Following this league we would transition to a Winter Beach League managed and run by the wonderful Fiasco ladies (more information to follow).</p>
+    
+    <p>The cost would be significantly reduced, most likely $10, making it one of our cheapest leagues ever.</p>
+    
+    <p>The games would be 4v4 with either a 3-1 or 2-2 gender ratio.  We'll be looking to find a competitive & fun level of play.</p>
+    
+    <p>We'll be hosting the draft on October 21st, and we're looking for captains.</p>
+    
+    <p>Thanks,</p>
   </div>
 
   <div style="background-color: gray;background-color: #dddddd;text-align: center;padding: 18px;">
