--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -16,7 +16,7 @@ html(lang='en')
     link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
 
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
-    link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:400|Source+Sans+Pro:400,700")
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:300,400,400i,700")
 
     //- Customise the stylesheet for your site by editing /public/styles/site.sass
     link(rel="stylesheet" href="/styles/site.css")
@@ -50,14 +50,14 @@ html(lang='en')
 
       div(role="navigation").navbar.navbar-inverse
         .container-fluid
+          a.navbar-brand(href='/')
+            img(src='/images/logo-skyline.png')
           .navbar-header
             button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
               span.sr-only Toggle navigation
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href='/')
-              img(src='/images/nav-logo.png')
           .collapse.navbar-collapse
             ul.nav.navbar-nav.navbar-left
               each link in navLinks
