--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -3,9 +3,9 @@ extends ../layouts/default
 block head
   meta(property="og:title"        content="Register now for Spring League!")
   meta(property="og:url"          content="http://www.sflultimate.com/register")
-  meta(property="og:description"  content="Registration closes Sunday October 2nd, so sign up to save your spot!")
+  meta(property="og:description"  content="Sign up to secure your spot!")
 
-  meta(property="og:image"        content="http://www.sflultimate.com/images/elfrink-sky.jpg")
+  meta(property="og:image"        content="http://www.sflultimate.com/images/beach-andrea-dumping.jpg")
   //- meta(property="og:image:width"  content="1200")
   //- meta(property="og:image:height" content="630")
 
@@ -13,24 +13,27 @@ block content
 
   .hero-sky
     .container
-      h1 2017 Spring League Registration
+      h1 2017 Fall League Registration
   
   .container.register: .row: .col-md-12
 
     h3 Summary
 
-    p This Spring we'll be back at Ives Estates Park, nearby where I-95 meets Ives Dairy Road.
-    iframe(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4926.558158835997!2d-80.17054581931154!3d25.969331102576923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9ac3d69e2ec2d%3A0xa21f0a46872e76b8!2sIves+Estates+Park!5e1!3m2!1sen!2sus!4v1485232989731', width='100%', height='350', frameborder='0', style='border:0', allowfullscreen='')
-    p Regular season games will be <strong>Sunday afternoons from 4-8pm, starting February 12th</strong>. We're planning on 10 weeks of play, skipping Easter Sunday (April 16th) and April 23rd. <strong>Finals are still being confirmed, but are planned to be Amelia Earhart Park on Saturday, May 6th.</strong>
+    p We'll play games on Saturday mornings at 10am near the beach space by Park & Ocean staring November, 4th and played until December 9th. Our finals would be on December 16th.
+
+    iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2595.3871114681165!2d-80.10347306511046!3d26.14049539386033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6f9406a6e78e90c1!2sPark+%26+Ocean!5e1!3m2!1sen!2sus!4v1508698698564" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen)
+
+    p Following this league we would transition to a Winter Beach League managed and run by the wonderful Fiasco ladies (more information to follow).
+
+    p games would be 4v4 with either a 3-1 or 2-2 gender ratio. We'll be looking to find a competitive & fun level of play.
 
     p Registration is open <strong>as of today</strong> and the costs are:
 
     ul
-      li $30 for students
-      li $50 for everyone else
+      li $10 for students
+      li $15 for everyone else
 
-    p Registration will close Thursday, February 9th.
-    //- p The fee includes the games, playoffs & events.  Late registration (at a $65 fee for everyone, as space permits) will continue until after the first week of play.
+    p Registration will close November 1st at midnight.
 
     hr
 
@@ -43,10 +46,12 @@ block content
     p If you see your name on the dropdown as you type your name, please click on it so that we can match your records and get your previous answers to the following questions.
 
     form#registration(action="register" method="post" autocomplete="off")
+
       if err
         .alert.alert-danger
           strong Error: 
           span=err
+
       input#user_id.input-lg.form-control.hidden(type='user_id' autocomplete='false' name='user_id' placeholder='' value=formData.user_id)
       .row
         .col-xs-6
@@ -62,7 +67,7 @@ block content
       //- Email
       .form-group
         label(for='email') Email address
-        input#email.input-lg.form-control(type='email' name='email'   placeholder='' value=formData.email required)
+        input#email.input-lg.form-control(type='email' name='email' placeholder='' value=formData.email required)
 
       //- Pairing
       .form-group
