Removing shirt size field

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -100,14 +100,14 @@ block content
       br
 
       //- Shirt Size
-      label(for="shirtSize" name="shirtSize") Shirt Size
-      select#shirtSize.input-lg.form-control(name="shirtSize" value=formData.shirtSize)
-        option(value="S") S
-        option(value="M") M
-        option(value="L") L
-        option(value="XL") XL
-        option(value="XXL") XXL
-      br
+      //- label(for="shirtSize" name="shirtSize") Shirt Size
+      //- select#shirtSize.input-lg.form-control(name="shirtSize" value=formData.shirtSize)
+      //-   option(value="S") S
+      //-   option(value="M") M
+      //-   option(value="L") L
+      //-   option(value="XL") XL
+      //-   option(value="XXL") XXL
+      //- br
 
       //- Skill Level
       label(for="skillLevel" name="skillLevel") Skill Level
