--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,9 +1,9 @@
 <div>
   
-  <img src="http://www.sflultimate.com/images/hatter-beach-ultimate.jpg" alt="" style="max-width: 100%; height: auto;">
+  <img src="http://www.sflultimate.com/images/beach-andrea-dumping.jpg" alt="" style="max-width: 100%; height: auto;">
 
   <div style="background-color: #804399; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
-    <img src="http://www.sflultimate.com/images/nav-logo.png" style="height: 70px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
+    <img src="http://www.sflultimate.com/images/logo-skyline.png" style="height: 150px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
   </div>
 
   <div style="padding: 1em;">
