Added beach jamie sky

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,6 +1,6 @@
 <div>
   
-  <img src="http://www.sflultimate.com/images/beach-andrea-dumping.jpg" alt="" style="max-width: 100%; height: auto;">
+  <img src="http://www.sflultimate.com/images/beach-jaime-breaking.jpg" alt="" style="max-width: 100%; height: auto;">
 
   <div style="background-color: #804399; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
     <img src="http://www.sflultimate.com/images/logo-skyline.png" style="height: 150px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
@@ -11,7 +11,7 @@
     
     <p>Welcome everyone!</p>
     
-    <p>With a new fall comes a brand new, <strong>revolutionary</strong> way to play Ultimate Frisbee.</p>
+    <p>Registration has now opened, <strong>revolutionary</strong> way to play Ultimate Frisbee.</p>
     
     <p><strong>Florida ranks #2 in beach coastline</strong> with 1,350 miles of pristine, gorgeous, sunny, beaches (trivia: Alaska is #1 but surprisingly no one likes playing beach frisbee there).</p>
     
