Adding logs for sale

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,35 +1,39 @@
 <div>
   
-  <img src="http://www.sflultimate.com/images/beach-jaime-breaking.jpg" alt="" style="max-width: 100%; height: auto;">
+  <img src="http://www.sflultimate.com/images/beach-jamie-sky.jpg" alt="" style="max-width: 100%; height: auto;">
 
-  <div style="background-color: #804399; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
+  <div style="background-color: purple; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
     <img src="http://www.sflultimate.com/images/logo-skyline.png" style="height: 150px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
   </div>
 
   <div style="padding: 1em;">
 
     
-    <p>Welcome everyone!</p>
+    <p>Welcome!</p>
     
-    <p>Registration has now opened, <strong>revolutionary</strong> way to play Ultimate Frisbee.</p>
+    <p><strong>Registration for the South Florida Beach Ultimate League has now opened</strong> and will close <strong>November 1st</strong> at midnight!</p>
+
+    <a target="_blank" href="http://www.sflultimate.com" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">Register Now!</a>
+
+    <p>If you have any questions, feel free to send an e-mail sflultimate@gmail.com</p>
+
+    <p>In addition, we would like to recognize the following wonderful volunteers helping run this league:<br>
+      • Rica Patel<br>
+      • Sofia Whittaker<br>
+      • Alex AJ Jacoski<br>
+      • Gabriela Segnini<br>
+      • Some purse company guy
+    </p>
+
+    <p>There's still time to volunteer, as we are looking for a few more captains</p>
     
-    <p><strong>Florida ranks #2 in beach coastline</strong> with 1,350 miles of pristine, gorgeous, sunny, beaches (trivia: Alaska is #1 but surprisingly no one likes playing beach frisbee there).</p>
-    
-    <p>Yet we haven't taken advantage of this wondrous gift.</p>
-    
-    <p>For this reason, we've decided for this fall and winter to offer our <strong>first organized Beach Ultimate League</strong>.</p>
-    
-    <p>>We'll games on Saturday mornings at 10am near the beach space by Park & Ocean <strong>staring November, 4th and played until December 9th.</strong>  Our finals would be on December 16th.</p>
-    
-    <p>Following this league we would transition to a Winter Beach League managed and run by the wonderful Fiasco ladies (more information to follow).</p>
-    
-    <p>The cost would be significantly reduced, most likely $10, making it one of our cheapest leagues ever.</p>
-    
-    <p>The games would be 4v4 with either a 3-1 or 2-2 gender ratio.  We'll be looking to find a competitive & fun level of play.</p>
-    
-    <p>We'll be hosting the draft on October 21st, and we're looking for captains.</p>
-    
-    <p>Thanks,</p>
+    <p>Sincerely,<br>
+       SFLUltimate
+    </p>
+
+    <p>
+      <em>Photo credit: David Ho</em>
+    </p>
   </div>
 
   <div style="background-color: gray;background-color: #dddddd;text-align: center;padding: 18px;">
