Ended registration period

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,6 +1,6 @@
 <div>
   
-  <img src="http://www.sflultimate.com/images/beach-jamie-sky.jpg" alt="" style="max-width: 100%; height: auto;">
+  <img src="https://c1.staticflickr.com/5/4261/35724461036_f3ee9eb71b_h.jpg" alt="" style="max-width: 100%; height: auto;">
 
   <div style="background-color: purple; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
     <img src="http://www.sflultimate.com/images/logo-skyline.png" style="height: 150px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
@@ -11,24 +11,16 @@
     
     <p>Welcome!</p>
     
-    <p><strong>Registration for the South Florida Beach Ultimate League has now opened</strong> and will close <strong>November 1st</strong> at midnight!</p>
+    <p><strong>Registration for the South Florida Beach Ultimate League closes tomorrow, November 1st</strong> at midnight!</p>
 
     <a target="_blank" href="http://www.sflultimate.com" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">Register Now!</a>
 
     <p>If you have any questions, feel free to send an e-mail sflultimate@gmail.com</p>
 
-    <p>In addition, we would like to recognize the following wonderful volunteers helping run this league:<br>
-      • Rica Patel<br>
-      • Sofia Whittaker<br>
-      • Alex AJ Jacoski<br>
-      • Gabriela Segnini<br>
-      • Some purse company guy
-    </p>
-
     <p>There's still time to volunteer, as we are looking for a few more captains</p>
     
     <p>Sincerely,<br>
-       SFLUltimate
+       Your SFLUltimate Volunteers
     </p>
 
     <p>
