--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -19,9 +19,9 @@ block content
         .col-md-6
           h1 It's Beach Time!
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p We now have the pleasure of welcoming you to our own very 1st South Florida beach league!
-      div.text-center
-        a.btn.btn-lg.btn-primary(href="/register") Sign up
+          p We just finished getting 49 sign ups for the beach league, and will shortly post the teams and schedule!
+      //- div.text-center
+      //-   a.btn.btn-lg.btn-primary(href="/register") Sign up
 
   .features
     .container
