--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,6 +1,6 @@
 <div>
   
-  <img src="https://c1.staticflickr.com/5/4261/35724461036_f3ee9eb71b_h.jpg" alt="" style="max-width: 100%; height: auto;">
+  <img src="https://c1.staticflickr.com/5/4096/35723711496_44069cb264_h.jpg" alt="" style="max-width: 100%; height: auto;">
 
   <div style="background-color: purple; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
     <img src="http://www.sflultimate.com/images/logo-skyline.png" style="height: 150px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
@@ -8,16 +8,31 @@
 
   <div style="padding: 1em;">
 
+    <p>Hello Players!</p>
     
-    <p>Welcome!</p>
+    <p><strong>Teams have been picked</strong> and we had an amazing 49 registrations, meaning we now have 6 teams!</p>
+
+    <p><strong>Our first game is this Saturday, November 2nd, at 10am. Please get there by 9:30am</strong> so you have time to meet your captains and your teammates.</p>
+
+    <p>There is $5 all day parking at Hugh Taylor Birch State Park (which has an easy access to the beach) or street parking.</p>
     
-    <p><strong>Registration for the South Florida Beach Ultimate League closes tomorrow, November 1st</strong> at midnight!</p>
+    <p>We highly recommend that you bring:</p>
+    <ul>
+      <li>A white and colored shirt/jersey</li>
+      <li>Water</li>
+      <li>Sun block</li>
+      <li>A insatiable appetite for ultimate &amp; friendship</li>
+    </ul>
 
-    <a target="_blank" href="http://www.sflultimate.com" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">Register Now!</a>
+    <p>After our games, everyone is welcome to visit Park and Ocean for drinks/food, where the entreprenurial Sofia Whittaker got us all a special South Florida Ultimate 10% discount!</p>
 
-    <p>If you have any questions, feel free to send an e-mail sflultimate@gmail.com</p>
+    <p>Now onto the excitement, go and see who is on your team!</p>
+    
+    <a target="_blank" href="https://docs.google.com/spreadsheets/d/1W7MatAL0XuY50_I4laZ2Bclq2fs86IXlD-k4UHZ5Yf8/" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">
+      See Your Team
+    </a>
 
-    <p>There's still time to volunteer, as we are looking for a few more captains</p>
+    <p>We do our best to respect partner requests, and we hope that you enjoy the teams we've created.  If you still have friends that would like to sign up, have them e-mail sflultimate@gmail.com</p>
     
     <p>Sincerely,<br>
        Your SFLUltimate Volunteers
