--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -17,11 +17,11 @@ block content
     .container
       .row
         .col-md-6
-          h1 It's Beach Time!
+          h1 Welcome
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p We're still allowing registration, so if you are still interested feel free to sign up!
+          p We're actually in the process of rebuilding for next fall, so check back soon.  
       div.text-center
-        a.btn.btn-lg.btn-primary(href="/register") Sign up
+        a.btn.btn-lg.btn-primary(href="/community") Check out local pickups
 
   .features
     .container
