--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -5,6 +5,16 @@
     to   { opacity: 1; transform: translateY(0%)}
 }
 
+#pickup-listing-map {
+  height: 450px;
+  #content {
+    font-size: 1.2em;
+    line-height: 1.4em;
+    font-weight: normal;
+    max-width: 400px;
+  }
+}
+
 .hero-sky {
   background: url("/images/beach-andrea-dumping.jpg");
   background-size: cover;
