Added social image

--- a/templates/views/community.jade
+++ b/templates/views/community.jade
@@ -3,7 +3,8 @@ extends ../layouts/default
 block head
   meta(property="og:title"        content="Local Broward/Dade Pickups")
   meta(property="og:url"          content="http://www.sflultimate.com/pickup")
-  meta(property="og:description"  content="Learn about local pickup near you!")
+  meta(property="og:description"  content="Learn about the local days, times, and locations for ultimate frisbee pickup near you!")
+  meta(property="og:image"        content="http://www.sflultimate.com/images/dave-catching-face.jpg")
 
 block content
   .container(ng-app='CommunityApp')
