Added facebook pixel

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -32,11 +32,28 @@ html(lang='en')
       script(src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js")
     //-[endif]
 
+
     //- Include template-specific stylesheets by extending the css block
     block css
 
     //- Add any other template-specific HEAD tags by extending the head block
     block head
+
+    //- Facebook Pixel Code
+    script.
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '2012250958870227');
+      fbq('track', 'PageView');
+    noscript
+    img(height='1', width='1', style='display:none', src='https://www.facebook.com/tr?id=2012250958870227&ev=PageView&noscript=1')
+    //- End Facebook Pixel Code
 
   //- HTML BODY
   body
