--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -15,7 +15,7 @@ html(lang='en')
     title= title || 'SFL Ultimate'
     link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
 
-    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
+    link(rel="stylesheet" href="/styles/font-awesome/font-awesome.min.css")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:300,400,400i,700")
 
     //- Customise the stylesheet for your site by editing /public/styles/site.sass
