--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -1,172 +1,131 @@
 extends ../layouts/default
 
 block head
-  meta(property="og:title"        content="Register now for Spring League!")
-  meta(property="og:url"          content="http://www.sflultimate.com/register")
-  meta(property="og:description"  content="Sign up to secure your spot!")
+    meta(property="og:title"        content="Register now for Spring League!")
+    meta(property="og:url"          content="http://www.sflultimate.com/register")
+    meta(property="og:description"  content="Sign up to secure your spot!")
 
-  meta(property="og:image"        content="http://www.sflultimate.com/images/beach-andrea-dumping.jpg")
-  //- meta(property="og:image:width"  content="1200")
-  //- meta(property="og:image:height" content="630")
+    meta(property="og:image"        content="http://www.sflultimate.com/images/beach-andrea-dumping.jpg")
+    //- meta(property="og:image:width"  content="1200")
+    //- meta(property="og:image:height" content="630")
 
 block content
 
-  .hero-sky
-    .container
-      h1 2017 Fall League Registration
-  
-  .container.register: .row: .col-md-12
+    //.hero-sky: .container: h1 2017 Fall League Registration
 
-    h3 Summary
+    .container.register: .row: .col-md-12
+        
+        img.beach-series-logo(src='/images/beach-ultimate-series-logo.jpg')
 
-    p We'll play games on Saturday mornings at 10am near the beach space by Park & Ocean staring November, 4th and played until December 9th. Our finals would be on December 16th.
+        p Greetings beach ultimate lovers!
+        
+        p South Florida Ultimate is happy to announce a series of beach ultimate hat tournaments coming in 2019!
+        
+        h3 Description
+        p The series consists of 3 beach ultimate Frisbee hat tournaments held on the following three dates, each one starting at 10am sharp.
 
-    iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2595.3871114681165!2d-80.10347306511046!3d26.14049539386033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6f9406a6e78e90c1!2sPark+%26+Ocean!5e1!3m2!1sen!2sus!4v1508698698564" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen)
+        ul
+            li Saturday January 5, 2019
+            li Saturday February 2nd, 2019 
+            li Saturday March 2, 2019 
 
-    p Following this league we would transition to a Winter Beach League managed and run by the wonderful Fiasco ladies (more information to follow).
+        p Register as an individual or as a pair. We'll make even teams and play a round robin!
+        p Each event cost $20 per player. You can sign for each one individually or all 3 for $50. 
+        p A portion of the proceeds will go to support the upcoming season of Fiasco Ultimate, South Florida's spicy women's team! 
+        p There will also have discs and merch for sale.
+        p Post game tournament party is across the street at Park and Ocean! 
+        
+        h3 Location
+        p Games will be held the beach across from Hugh Taylor Birch State Park, 3109 E Sunrise Blvd. Ft Lauderdale, FL.
+        p There is all day parking available in the park for $6 per vehicle.
+        
+        iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2595.3871114681165!2d-80.10347306511046!3d26.14049539386033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6f9406a6e78e90c1!2sPark+%26+Ocean!5e1!3m2!1sen!2sus!4v1508698698564" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen)
 
-    p games would be 4v4 with either a 3-1 or 2-2 gender ratio. We'll be looking to find a competitive & fun level of play.
+            
+        h3 Registration
 
-    p Registration is open <strong>as of today</strong> and the costs are:
+        form#registration(autocomplete="off")
+            
+            .row
+                .col-md-6
+                    .form-group
+                        label(for='first_name') First Name
+                        input#first_name.input-lg.form-control(type='text' name='first_name' placeholder='' value=formData.firstName required)
+                .col-md-6
+                    .form-group
+                        label(for='last_name') Last Name
+                        input#last_name.input-lg.form-control(type='text' name='last_name' placeholder='' value=formData.lastName required)
+                        
+            .form-group
+                label(for='email') Email Address
+                input#email.input-lg.form-control(type='email' name='email' placeholder='' value=formData.email required)
+            
+            .form-group
+                label(for='partner_name') Partner Name
+                input#partner_name.input-lg.form-control(type='text' name='partner_name' placeholder='' value=formData.email required)
+            
+            .form-group
+                label(for="gender" name="gender") Gender
+                select#gender.input-lg.form-control(name="gender" value=formData.gender)
+                    option(value='Female') Female
+                    option(value='Male') Male
 
-    ul
-      li $10 for students
-      li $15 for everyone else
+            .form-group
+                label Registration Dates
+                
+                .checkbox
+                    label
+                        input(type="checkbox" value="")
+                        | Saturday January 5, 2019
+                .checkbox
+                    label
+                        input(type="checkbox" value="")
+                        | Saturday January 5, 2019
+                .checkbox
+                    label
+                        input(type="checkbox" value="")
+                        | Saturday March 2, 2019
 
-    p Registration will close November 1st at midnight.
+            h3 Waiver
 
-    hr
+            .checkbox
+                label
+                    input(type='checkbox', value='' required)
+                    | I agree to SFLUltimate's <a data-toggle="modal" data-target="#waiver">terms & conditions</a>.
 
-    h3 Registration
+            h3 Payment Information
+            
+            p Your will be charged <strong>$20.00</strong>.
 
-    .alert.alert-info
-      strong Refund Policy: 
-      | Should there be an error in your registration (paid for a youth fee when an adult or vice versa), we will provide a refund.  Otherwise we will not be providing refunds.
+            #payment-form
 
-    p If you see your name on the dropdown as you type your name, please click on it so that we can match your records and get your previous answers to the following questions.
+            .text-center
+                button.btn.btn-default.btn-lg.btn-primary(type='submit') Submit
 
-    form#registration(action="register" method="post" autocomplete="off")
-
-      if err
-        .alert.alert-danger
-          strong Error: 
-          span=err
-
-      input#user_id.input-lg.form-control.hidden(type='user_id' autocomplete='false' name='user_id' placeholder='' value=formData.user_id)
-      .row
-        .col-xs-6
-          .form-group
-            label(for='firstName') First Name
-
-            input#firstName.input-lg.form-control(type='text' name='name.first' placeholder='' value=formData['name.first'] required)
-        .col-xs-6
-          .form-group
-            label(for='lastName') Last Name
-            input#lastName.input-lg.form-control(type='text' name='name.last' placeholder='' value=formData['name.last'] required)
-
-      //- Email
-      .form-group
-        label(for='email') Email address
-        input#email.input-lg.form-control(type='email' name='email' placeholder='' value=formData.email required)
-
-      //- Pairing
-      .form-group
-        label(for='partner') Partner<br><small>If you would like to pair up with another player for sign-up, write their name here.</small>
-        input#partner.input-lg.form-control(type='partner' autocomplete='false' name='partner' placeholder='' value=formData.partner)
-        input#partner_id.input-lg.form-control.hidden(type='partner_id' autocomplete='false' name='partner_id' placeholder='' value=formData.partner_id)
-
-      //- Gender
-      label(for="gender" name="gender") Gender
-
-      select#gender.input-lg.form-control(name="gender" value=formData.gender)
-        option(value="Female") Female
-        option(value="Male") Male
-      br
-
-
-      //- Age Group
-      #age
-        label Are you a:
-          .radio
-            label
-              input(type='radio' name='age' value='Adult')
-              |     Adult
-          .radio
-            label
-              input(type='radio' name='age' value='Student')
-              |     Student
-
-      //- Participation
-      label(for="participation" name="participation") Expected Attendance
-
-      p
-        small Knowing how often you plan on being there helps captains pick well-rounded teams
-
-      select#participation.input-lg.form-control(name="participation" value=formData.participation)
-        option(value="30") Less than 30%
-        option(value="50") Around 50%
-        option(value="80" selected="selected") Greater than 80%
-      br
-
-      //- Shirt Size
-      //- label(for="shirtSize" name="shirtSize") Shirt Size
-      //- select#shirtSize.input-lg.form-control(name="shirtSize" value=formData.shirtSize)
-      //-   option(value="S") S
-      //-   option(value="M") M
-      //-   option(value="L") L
-      //-   option(value="XL") XL
-      //-   option(value="XXL") XXL
-      //- br
-
-      //- Skill Level
-      label(for="skillLevel" name="skillLevel") Skill Level
-      select#skillLevel.input-lg.form-control(name="skillLevel" value=formData.skillLevel)
-        option(value='1') 1 - Absolute Beginner
-        option(value='2') 2 - Hey wait, what's a flick?
-        option(value='3') 3 - Working on throws, basic knowledge of game
-        option(value='4') 4 - Pickup player, okay throws
-        option(value='5') 5 - Decent backhand & forehand. Little to no club experience
-        option(value='6') 6 - Fairly solid backhand & forehand. Some club experience
-        option(value='7') 7 - Tourney experience. Several years of club
-        option(value='8') 8 - Club level, solid all around, not prone to errors
-        option(value='9') 9 - Rock star. spot on throws, awesome D
-
-      br
-      h3 Waiver
-      .checkbox
-        label
-          input(type='checkbox', value='' required)
-          | I agree to SFLUltimate's <a data-toggle="modal" data-target="#waiver">terms & conditions</a>.
-
-      h3 Payment Information
-      #payment-form
-      .text-center
-        button.btn.btn-default.btn-lg.btn-primary(type='submit') Submit
-
-  .modal.fade(tabindex='-1', role='dialog' id='waiver')
-    .modal-dialog.modal-lg
-      .modal-content
-        .modal-header
-          button.close(type='button', data-dismiss='modal', aria-label='Close')
-            span(aria-hidden='true') ×
-          h4.modal-title Waiver
-        .modal-body
-          p
-            | 1. In consideration for receiving permission to participate in the South Florida Ultimate Spring League I hereby <strong>release, waive, discharge, and convenant not to sue</strong> South Florida Ultimate, their officers, agents, or employees (hereinafter referred to as <strong>releasees</strong>) from any and all liability, claims, demands, actions, and causes of action whatsoever arising out of or related to any loss, damage, or injury, including death, that may be sustained by me, or to any property belonging to me, while participating in such activity, while in, on or upon the premises where the activities are being conducted, <strong>regardless of whether such loss is caused by the negligence of the releasees</strong>, or otherwise and regardless of whether such liability arises in tort, contract, strict liability, or otherwise, to the fullest extent allowed by law.
-          p
-            | 2. I am fully aware of the risks and hazards connected with the activities of Ultimate, and I am aware that such activities include the risk of injury and even death, and I hereby elect to voluntarily participate in said activities, knowing that the activities may be hazardous to my property and me. I understand that South Florida Ultimate does not require me to participate in this activity. I voluntarily assume full responsibility for any risks of loss, property damage, or personal injury, including death, that may be sustained by me, or any loss or damage to property owned by me, as a result of being engaged in such an activities, <strong>whether caused by the negligence of releasees</strong> or otherwise, to the fullest extent allowed by law.
-          p
-            | 3. I further hereby <strong>agree to indemnify and hold harmless the releasees</strong> from any loss, liability, damage, or costs, including court costs and attorneys' fees that Releases may incur due to my participation in said activities, <strong>whether caused by the negligence of releasees</strong> or otherwise, to the fullest extent allowed by law.
-          p
-            | 4. It is my express intent that this Waiver and Hold Harmless Agreement shall bind the members of my family and spouse, if I am alive, and my heirs, assigns and personal representative, if I am deceased, and shall be deemed as a <strong>release, waiver, discharge, and covenant not to sue</strong> the above-named RELEASEES. I hereby further agree that this Waiver of Liability and Hold Harmless Agreement shall be construed in accordance with the laws of the State of Florida and that any mediation, suit, or other proceeding must be filed or entered into only in Florid and the federal or state courts of Maryland. Any portion of this document deemed unlawful or unenforceable is severable and shall be stricken without any effect on the enforceability of the remaining provisions.
-          p
-            | <strong>In completing this registration, I acknowledge and represent that</strong> I have read the foregoing Wavier of Liability and Hold Harmless Agreement, understand it and sign it voluntarily as my own free act and deed; no oral representations, statements, or inducements, apart from the foregoing written agreement, have been made; I am at least eighteen (18) years of age and fully competent; and I execute this Agreement for full, adequate and complete consideration fully intending to be bound by same.
-        .modal-footer
-          button.btn.btn-primary(type='button', data-dismiss='modal') Close
+    .modal.fade(tabindex='-1', role='dialog' id='waiver')
+        .modal-dialog.modal-lg
+            .modal-content
+                .modal-header
+                    button.close(type='button', data-dismiss='modal', aria-label='Close')
+                        span(aria-hidden='true') ×
+                    h4.modal-title Waiver
+                .modal-body
+                    p
+                        | 1. In consideration for receiving permission to participate in the South Florida Ultimate Spring League I hereby <strong>release, waive, discharge, and convenant not to sue</strong> South Florida Ultimate, their officers, agents, or employees (hereinafter referred to as <strong>releasees</strong>) from any and all liability, claims, demands, actions, and causes of action whatsoever arising out of or related to any loss, damage, or injury, including death, that may be sustained by me, or to any property belonging to me, while participating in such activity, while in, on or upon the premises where the activities are being conducted, <strong>regardless of whether such loss is caused by the negligence of the releasees</strong>, or otherwise and regardless of whether such liability arises in tort, contract, strict liability, or otherwise, to the fullest extent allowed by law.
+                    p
+                        | 2. I am fully aware of the risks and hazards connected with the activities of Ultimate, and I am aware that such activities include the risk of injury and even death, and I hereby elect to voluntarily participate in said activities, knowing that the activities may be hazardous to my property and me. I understand that South Florida Ultimate does not require me to participate in this activity. I voluntarily assume full responsibility for any risks of loss, property damage, or personal injury, including death, that may be sustained by me, or any loss or damage to property owned by me, as a result of being engaged in such an activities, <strong>whether caused by the negligence of releasees</strong> or otherwise, to the fullest extent allowed by law.
+                    p
+                        | 3. I further hereby <strong>agree to indemnify and hold harmless the releasees</strong> from any loss, liability, damage, or costs, including court costs and attorneys' fees that Releases may incur due to my participation in said activities, <strong>whether caused by the negligence of releasees</strong> or otherwise, to the fullest extent allowed by law.
+                    p
+                        | 4. It is my express intent that this Waiver and Hold Harmless Agreement shall bind the members of my family and spouse, if I am alive, and my heirs, assigns and personal representative, if I am deceased, and shall be deemed as a <strong>release, waiver, discharge, and covenant not to sue</strong> the above-named RELEASEES. I hereby further agree that this Waiver of Liability and Hold Harmless Agreement shall be construed in accordance with the laws of the State of Florida and that any mediation, suit, or other proceeding must be filed or entered into only in Florid and the federal or state courts of Maryland. Any portion of this document deemed unlawful or unenforceable is severable and shall be stricken without any effect on the enforceability of the remaining provisions.
+                    p
+                        | <strong>In completing this registration, I acknowledge and represent that</strong> I have read the foregoing Wavier of Liability and Hold Harmless Agreement, understand it and sign it voluntarily as my own free act and deed; no oral representations, statements, or inducements, apart from the foregoing written agreement, have been made; I am at least eighteen (18) years of age and fully competent; and I execute this Agreement for full, adequate and complete consideration fully intending to be bound by same.
+                .modal-footer
+                    button.btn.btn-primary(type='button', data-dismiss='modal') Close
 
 block js
-  script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.0/bootstrap3-typeahead.min.js")
-  script(src='https://js.braintreegateway.com/v2/braintree.js')
-  script.
-    var clientToken = "#{braintree_token}";
-  script(src='js/register-form.js')
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.0/bootstrap3-typeahead.min.js")
+    script(src='https://js.braintreegateway.com/v2/braintree.js')
+    script.
+        var clientToken = "#{braintree_token}";
+    script(src='js/register-form.js')
