adding comments section

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -78,6 +78,11 @@ block content
                         option(value='8') 8 - Club level, solid all around, not prone to errors
                         option(value='9') 9 - Rock star. spot on throws, awesome D
 
+            .form-group
+                label Comments
+                textarea.form-control
+                        
+                        
             .form-group#registration_dates
                 label Registration Dates
                 
